Add lib for GWT RPC, add BaseEntity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.application.name=general
-hust.ctt.url=https://ctt-sis.hust.edu.vn/
-hust.ctt.login.path=Account/Login.aspx
+hust.ctt.url=https://ctt-sis.hust.edu.vn
+hust.ctt.login.path=/Account/Login.aspx
 hust.ctt.captcha.start-index-dxcache-src=37884
 hust.ctt.captcha.end-index-dxcache-src=37936
 hust.ctt.captcha.root-folder-saved-image=E:/ctt_captcha/
+
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
+
+spring.mvc.converters.preferred-json-mapper=gson
