--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,13 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
+
         <dependency>
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-test</artifactId>
@@ -60,14 +67,25 @@
             <version>2.11.0</version>
         </dependency>
         <dependency>
-            <groupId>com.google.gwt</groupId>
-            <artifactId>gwt</artifactId>
-            <version>2.10.0</version>
-        </dependency>
-        <dependency>
             <groupId>org.apache.httpcomponents.client5</groupId>
             <artifactId>httpclient5</artifactId>
             <version>5.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>lib</groupId>
+            <artifactId>gwt-user</artifactId>
+            <version>2.11.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/gwt-user.jar</systemPath>
+        </dependency>
+
+        <dependency>
+            <groupId>lib</groupId>
+            <artifactId>requestfactory</artifactId>
+            <version>2.11.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/requestfactory-client+src.jar</systemPath>
         </dependency>
     </dependencies>
 
