--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,11 @@
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/requestfactory-client+src.jar</systemPath>
         </dependency>
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <build>
