--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,16 @@ hust.ctt.captcha.start-index-dxcache-src=37884
 hust.ctt.captcha.end-index-dxcache-src=37936
 hust.ctt.captcha.root-folder-saved-image=E:/ctt_captcha/
 
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
 
 spring.mvc.converters.preferred-json-mapper=gson
+
+spring.jpa.database=mysql
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.name=hust_data
+spring.datasource.username=root
+spring.datasource.password=12345678
+spring.datasource.url=jdbc:mysql://localhost:3306/hust_data
+
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+spring.jpa.hibernate.ddl-auto=update
