--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ hust.ctt.captcha.start-index-dxcache-src=37884
 hust.ctt.captcha.end-index-dxcache-src=37936
 hust.ctt.captcha.root-folder-saved-image=E:/ctt_captcha/
 
-#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
 
 spring.mvc.converters.preferred-json-mapper=gson
 
